# custom-dynamic-memory-management

./: CMakeLists.txt  LICENSE  README.md  rules.md
include/: LinearAllocator.h  PoolAllocator.h
src/: LinearAllocator.cpp  PoolAllocator.cpp  main.cpp
tests/: PoolAllocatorTest.cpp
